# glow-control

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build_and_deploy_website.yml  dependabot-auto-merge.yml  rust.yml
glow-control/: Cargo.toml  README.md
glow-control-lib/: Cargo.toml  README.md
glow-control-lib/src/: lib.rs
glow-control-lib/src/control_interface/: mod.rs
glow-control-lib/src/led/: color_meander.rs  led_color.rs  mod.rs  pattern.rs
glow-control-lib/src/util/: auth.rs  control.rs  discovery.rs  mod.rs  movie.rs  rc4.rs  traits.rs
glow-control-website/: Cargo.toml
glow-control-website/book/: book.toml
glow-control-website/book/src/: SUMMARY.md  introduction.md
glow-control-website/book/src/advanced_features/: device_discovery.md  real_time_control.md
glow-control-website/src/: main.rs
glow-control-website/website/: error.html  index.html  manifest.json
glow-control/src/: main.rs
