[package]
name = "glow-control-lib"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

clap = { version = "3", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
base64 = "0.13.0"
rand = "0.8.4"
sha1 = "0"
hex = "0.4.3"
lazy_static = "1"
rand_distr = "0"
chrono = "0"


bytes = "1"
palette = "0.7"

