[package]
name = "glow-control-lib"
version = "0.3.4"
edition = "2021"
description = "A library for controlling programmable LED lights"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgorski/glow-control"
documentation = "https://docs.rs/glow-control-lib"
readme = "../README.md"
authors = ["Chris Gorski <cgorski@cgorski.org>"]
keywords = ["led", "control", "twinkly"]
categories = ["hardware-support", "api-bindings", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0"
env_logger = "0.10"
base64 = "0.21"
rand = "0.8"
sha1 = "0.10"
hex = "0.4"
lazy_static = "1.4"
rand_distr = "0.4"
chrono = "0.4"
bytes = "1.1"
palette = "0.7"
derivative = "2.2.0"
uuid = { version = "1.7.0", features = ["v4"] }
