[package]
name = "glow-control-lib"
version = "0.6.0"
edition = "2021"
description = "A library for controlling programmable LED lights"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgorski/glow-control"
documentation = "https://docs.rs/glow-control-lib"
readme = "../README.md"
authors = ["Chris Gorski <cgorski@cgorski.org>"]
keywords = ["led", "control", "twinkly"]
categories = ["hardware-support", "api-bindings", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.39", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
rand = "0.8"
sha1 = "0.10"
hex = "0.4"
lazy_static = "1.5"
rand_distr = "0.4"
chrono = "0.4"
bytes = "1.6"
palette = "0.7"
derivative = "2.2"
uuid = { version = "1.10", features = ["v4"] }
glow-effects = { version = "0.5.0" }

