[package]
name = "glow-control-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["full"] }
mime_guess = "2.0"
aws-sdk-s3 = "1.23"
aws-config = "1.2"
anyhow = "1.0"
futures = "0.3"
