[package]
name = "glow-control-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["full"] }
mime_guess = "2.0"
aws-sdk-s3 = "1.32"
aws-config = "1.5"
anyhow = "1.0"
futures = "0.3"
