[package]
name = "glow-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
sha1 = "0"
glow-control-lib = { path = "../glow-control-lib" }