[package]
name = "glow-control"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.9"
glow_control_lib = { version = "0.3.1", path = "../glow-control-lib" }
