[package]
name = "glow-control"
version = "0.3.5"
edition = "2021"
description = "A CLI for controlling programmable LED lights"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgorski/glow-control"
documentation = "https://docs.rs/glow-control"
readme = "../README.md"
authors = ["Chris Gorski <cgorski@cgorski.org>"]
keywords = ["led", "control", "twinkly"]
categories = ["hardware-support", "api-bindings", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.9"
glow-control-lib = { version = "0.3.5", path = "../glow-control-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
